buildscript {
    ext {
        springBootVersion = "2.2.2.RELEASE"
        lombokVersion = "1.18.6"
        liquibaseVersion = '4.1.1'
        liquibasePluginVersion = '2.0.3'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("org.liquibase:liquibase-core:${liquibaseVersion}")
        classpath("org.liquibase:liquibase-gradle-plugin:${liquibasePluginVersion}") {
            exclude(module: 'liquibase-core')
        }
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.2.RELEASE'
    id "io.freefair.lombok" version "5.1.0"
    id 'org.liquibase.gradle' version '2.0.3'
}

group 'com.reputation-telegram-bot'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

ext {
    springBootVersion = "2.2.2.RELEASE"
    lombokVersion = "1.18.6"
    postgresqlVersion = '42.2.12'
    liquibaseVersion = '4.1.1'
    liquibasePluginVersion = '2.0.3'
}

dependencies {
    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    compile("org.apache.commons:commons-lang3:3.0")

    implementation("org.telegram:telegrambots-spring-boot-starter:4.9.1")
    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
    implementation("org.postgresql:postgresql:${postgresqlVersion}")

    liquibaseRuntime("org.liquibase:liquibase-core:${liquibaseVersion}")
    liquibaseRuntime("org.liquibase:liquibase-groovy-dsl:3.0.0")
    liquibaseRuntime("org.postgresql:postgresql:${postgresqlVersion}")

    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
    testCompile("junit:junit:4.12")
}

liquibase {
    activities {
        main {
            changeLogFile 'src/main/resources/db/changelog/db.changelog-master.groovy'
            url System.getenv('JDBC_DATABASE_URL')
            username System.getenv('JDBC_DATABASE_USERNAME')
            password System.getenv('JDBC_DATABASE_PASSWORD')
        }
    }
    runList = 'main'
}
